[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/MenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://images/menu_images/activity-ga38aa5a6c_1920.jpg" type="Texture" id=4]

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = -203.0
margin_top = -376.0
margin_right = 1717.0
margin_bottom = 900.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_top = 8.0
margin_right = 400.0
margin_bottom = 148.0
custom_colors/default_color = Color( 0.796078, 0.027451, 0.027451, 1 )
custom_fonts/normal_font = ExtResource( 2 )
text = " Checkers"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -424.0
margin_right = 366.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Solo" type="Button" parent="VBoxContainer"]
light_mask = 0
margin_right = 366.0
margin_bottom = 103.0
custom_colors/font_color_hover = Color( 0.796078, 0.027451, 0.027451, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/focus = SubResource( 1 )
text = "Solo"
flat = true
align = 0

[node name="Online" type="Button" parent="VBoxContainer"]
margin_top = 107.0
margin_right = 366.0
margin_bottom = 210.0
custom_colors/font_color_hover = Color( 0.796078, 0.027451, 0.027451, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/focus = SubResource( 2 )
text = "Online"
flat = true
align = 0

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 214.0
margin_right = 366.0
margin_bottom = 317.0
custom_colors/font_color_hover = Color( 0.796078, 0.027451, 0.027451, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/focus = SubResource( 3 )
text = "Options"
flat = true
align = 0

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 321.0
margin_right = 366.0
margin_bottom = 424.0
custom_colors/font_color_hover = Color( 0.796078, 0.027451, 0.027451, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/focus = SubResource( 4 )
text = "Exit"
flat = true
align = 0

[node name="AccountPanel" type="ColorRect" parent="."]
margin_left = 812.0
margin_top = 530.0
margin_right = 1011.0
margin_bottom = 594.0
color = Color( 0.184314, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="AccountPanel"]
anchor_left = 0.663
anchor_top = 0.711
anchor_right = 0.935
anchor_bottom = 0.911
margin_left = -62.937
margin_top = -9.68301
margin_right = -63.065
margin_bottom = -0.283012
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="AccountPanel"]
anchor_left = 0.236
anchor_top = 0.443
anchor_right = 0.543
anchor_bottom = 0.696
margin_left = -26.964
margin_top = -14.479
margin_right = -27.057
margin_bottom = -9.888
tab_size = 1
text = "Profile:"

[node name="Username" type="RichTextLabel" parent="AccountPanel"]
anchor_left = 0.312
anchor_top = -3.776
anchor_right = 1.0
anchor_bottom = 0.742
margin_left = 6.912
margin_top = 255.664
margin_bottom = -13.524
text = "Not Logged In"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginPanel" type="ColorRect" parent="."]
visible = false
anchor_right = 0.417
margin_left = 749.0
margin_top = 348.0
margin_right = 583.992
margin_bottom = 594.0
color = Color( 0.184314, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequestHandler" type="HTTPRequest" parent="LoginPanel"]

[node name="PasswordEntry" type="TextEdit" parent="LoginPanel"]
margin_left = 93.0
margin_top = 107.0
margin_right = 221.0
margin_bottom = 131.0

[node name="UsernameEntry" type="TextEdit" parent="LoginPanel"]
margin_left = 93.0
margin_top = 72.0
margin_right = 221.0
margin_bottom = 96.0

[node name="PasswordLabel" type="RichTextLabel" parent="LoginPanel"]
margin_left = 12.0
margin_top = 111.0
margin_right = 100.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 76, -21 )
text = "Password:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="RichTextLabel" parent="LoginPanel"]
margin_left = 11.0
margin_top = 75.0
margin_right = 99.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 76, -21 )
text = "Username:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoAccountLabel" type="RichTextLabel" parent="LoginPanel"]
margin_left = 42.0
margin_top = 179.0
margin_right = 208.0
margin_bottom = 196.0
text = "Don't have an account?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="Button" parent="LoginPanel"]
margin_left = 72.0
margin_top = 141.0
margin_right = 161.0
margin_bottom = 167.0
text = "Login"

[node name="RegisterButton" type="Button" parent="LoginPanel"]
margin_left = 72.0
margin_top = 207.0
margin_right = 161.0
margin_bottom = 233.0
text = "Register"

[node name="RichTextLabel" type="RichTextLabel" parent="LoginPanel"]
margin_left = 10.0
margin_top = 18.0
margin_right = 238.0
margin_bottom = 58.0
text = "Enter Username and Password to Login."

[node name="LoginToProfile" type="Button" parent="LoginPanel"]
margin_left = 236.0
margin_top = 5.0
margin_right = 256.0
margin_bottom = 25.0
text = "X"

[node name="RegisterPanel" type="ColorRect" parent="."]
visible = false
margin_left = 777.0
margin_top = 430.0
margin_right = 1011.0
margin_bottom = 594.0
color = Color( 0.184314, 0.156863, 0.156863, 1 )

[node name="RegisterToProfile" type="Button" parent="RegisterPanel"]
margin_left = 209.0
margin_top = 4.0
margin_right = 229.0
margin_bottom = 24.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegisterTitle" type="RichTextLabel" parent="RegisterPanel"]
margin_left = 53.0
margin_top = 7.0
margin_right = 186.0
margin_bottom = 24.0
text = "Register an Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="RichTextLabel" parent="RegisterPanel"]
margin_left = 7.0
margin_top = 36.0
margin_right = 124.0
margin_bottom = 53.0
text = "Enter Username:"

[node name="EmailLabel" type="RichTextLabel" parent="RegisterPanel"]
margin_left = 7.0
margin_top = 105.0
margin_right = 124.0
margin_bottom = 122.0
text = "Enter Email:"

[node name="EPasswordLabel" type="RichTextLabel" parent="RegisterPanel"]
margin_left = 7.0
margin_top = 58.0
margin_right = 124.0
margin_bottom = 75.0
text = "Enter Password:"

[node name="CPasswordLabel" type="RichTextLabel" parent="RegisterPanel"]
margin_left = 7.0
margin_top = 81.0
margin_right = 134.0
margin_bottom = 98.0
text = "Confirm Password:"

[node name="RegisterAccountButton" type="Button" parent="RegisterPanel"]
margin_left = 50.0
margin_top = 133.0
margin_right = 184.0
margin_bottom = 153.0
text = "Register Account"

[node name="UsernameEntry" type="TextEdit" parent="RegisterPanel"]
margin_left = 129.0
margin_top = 34.0
margin_right = 227.0
margin_bottom = 52.0

[node name="EPasswordEntry" type="TextEdit" parent="RegisterPanel"]
margin_left = 129.0
margin_top = 55.0
margin_right = 227.0
margin_bottom = 73.0

[node name="CPasswordEntry" type="TextEdit" parent="RegisterPanel"]
margin_left = 129.0
margin_top = 78.0
margin_right = 227.0
margin_bottom = 96.0

[node name="EmailEntry" type="TextEdit" parent="RegisterPanel"]
margin_left = 129.0
margin_top = 101.0
margin_right = 227.0
margin_bottom = 119.0

[connection signal="pressed" from="VBoxContainer/Solo" to="." method="_on_Solo_pressed"]
[connection signal="pressed" from="VBoxContainer/Online" to="." method="_on_Online_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="AccountPanel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="LoginPanel/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="LoginPanel/LoginToProfile" to="." method="_on_LoginToProfile_pressed"]
[connection signal="pressed" from="RegisterPanel/RegisterToProfile" to="." method="_on_RegisterToProfile_pressed"]
